--- a/index.html
+++ b/index.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- ====== Reset.css ====== -->
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <!-- ====== Embed font ====== -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Sen:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- style.css -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Figma to html PJ2</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body style="height: 10000px ;">
+    <!-- =============== Header=================== -->
+     <header class="header-fixed">
+        <div class="main-content">
+            <div class="body">
+                <!-- Logo -->
+                 <a href="#!">
+                  <img src="./assets/img/Logo.svg" alt="Besnik." class="logo">
+                 </a>
+
+                <!-- Nav -->
+                 <nav class="nav">
+                  <ul>
+                  <li>
+                    <a href="#!">Home</a>
+                  </li>
+                  <li>
+                    <a href="#!">Features</a>
+                  </li>
+                  <li>
+                    <a href="#!">Pricing</a>
+                  </li>
+                  <li>
+                    <a href="#!">About</a>
+                  </li>
+                  <li>
+                    <a href="#!">Contact</a>
+                  </li>
+                  </ul>
+                 </nav>
+
+                <!-- btn action -->
+                 <div class="action">
+                  <a href="#!" class="action-link">Sign in</a>
+                  <a href="#!" class="action-btn">Sign up</a>
+                 </div>
+            </div>
+        </div>
+     </header>
+  </body>
 </html>
