--- a/index.html
+++ b/index.html
@@ -16,44 +16,460 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Figma to html PJ2</title>
   </head>
-  <body style="height: 10000px ;">
+  <body>
     <!-- =============== Header=================== -->
-     <header class="header-fixed">
-        <div class="main-content">
-            <div class="body">
-                <!-- Logo -->
-                 <a href="#!">
-                  <img src="./assets/img/Logo.svg" alt="Besnik." class="logo">
-                 </a>
+    <header class="header-fixed">
+      <div class="main-content">
+        <div class="body">
+          <!-- Logo -->
+          <a href="#!">
+            <img src="./assets/img/Logo.svg" alt="Besnik." class="logo" />
+          </a>
 
-                <!-- Nav -->
-                 <nav class="nav">
-                  <ul>
-                  <li>
-                    <a href="#!">Home</a>
-                  </li>
-                  <li>
-                    <a href="#!">Features</a>
-                  </li>
-                  <li>
-                    <a href="#!">Pricing</a>
-                  </li>
-                  <li>
-                    <a href="#!">About</a>
-                  </li>
-                  <li>
-                    <a href="#!">Contact</a>
-                  </li>
-                  </ul>
-                 </nav>
+          <!-- Nav -->
+          <nav class="nav">
+            <ul>
+              <li>
+                <a href="#!">Home</a>
+              </li>
+              <li>
+                <a href="#!">Features</a>
+              </li>
+              <li>
+                <a href="#!">Pricing</a>
+              </li>
+              <li>
+                <a href="#!">About</a>
+              </li>
+              <li>
+                <a href="#!">Contact</a>
+              </li>
+            </ul>
+          </nav>
 
-                <!-- btn action -->
-                 <div class="action">
-                  <a href="#!" class="action-link">Sign in</a>
-                  <a href="#!" class="action-btn">Sign up</a>
-                 </div>
-            </div>
+          <!-- btn action -->
+          <div class="action">
+            <a href="#!" class="action-link">Sign in</a>
+            <a href="#!" class="action-btn">Sign up</a>
+          </div>
         </div>
-     </header>
+      </div>
+    </header>
+    <main>
+      <!-- ============ Hero ============== -->
+      <div class="hero">
+        <div class="main-content">
+          <div class="body">
+            <!-- Hero left -->
+            <div class="content-block">
+              <p class="top-title">😎 EASY LEAENING PLATFORM</p>
+              <h1 class="title">Learn with Gojo</h1>
+              <p class="desc">
+                Build skills with courses, certificates, and get online
+                knowledge from our world-class platform.
+              </p>
+              <div class="cta-group">
+                <a href="#!" class="btn">Get Started</a>
+                <button class="play-video">
+                  <img src="./assets/img/Play-Video.svg" alt="play-video" />
+                </button>
+              </div>
+            </div>
+
+            <!-- Hero right -->
+            <div class="media-block">
+              <img
+                src="./assets/img/alt.jpg"
+                alt="Words learner come here."
+                class="media"
+              />
+              <div class="media-course">
+                <img
+                  src="./assets/img/Book.svg"
+                  alt="Courses 1000+"
+                  class="course-icon"
+                />
+                <span class="detail">Courses 1000+</span>
+              </div>
+              <div class="media-schedules">
+                <span class="detail">Schedules</span>
+                <img
+                  src="./assets/img/ske1.svg"
+                  alt="schedules-icon1"
+                  class="schedules-icon icon1"
+                />
+                <img
+                  src="./assets/img/ske2.svg"
+                  alt="schedules-icon2"
+                  class="schedules-icon icon2"
+                />
+                <img
+                  src="./assets/img/ske3.svg"
+                  alt="schedules-icon3"
+                  class="schedules-icon icon3"
+                />
+                <img
+                  src="./assets/img/ske4.svg"
+                  alt="schedules-icon4"
+                  class="schedules-icon icon4"
+                />
+              </div>
+              <div class="avatar-block">
+                <span class="detail">Our Active Students</span>
+                <div class="ava-list">
+                  <img src="./assets/img/phu1.jpg" alt="avatar1" class="ava" />
+                  <img src="./assets/img/phu2.jpg" alt="avatar2" class="ava" />
+                  <img src="./assets/img/phu3.jpg" alt="avatar3" class="ava" />
+                  <img src="./assets/img/phu4.jpg" alt="avatar4" class="ava" />
+                  <div class="ava ava-more">
+                    <span>10K+</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- ============ Feature ============== -->
+      <div class="feature">
+        <div class="main-content">
+          <div class="body-feature">
+            <p class="top-title top-title-lv2">F E A T U R E S</p>
+            <h2 class="heading-lv2">
+              <a href="#!">We are providing suitable features for students.</a>
+            </h2>
+            <p class="desc">
+              Read our awesome feature that is absolutely suit for you. Explore
+              the feature and know the best.
+            </p>
+            <div class="feature-list">
+              <!-- Item1 -->
+              <div class="item">
+                <a href="#!">
+                  <img
+                    src="./assets/icon/Icon1.svg"
+                    alt="Live Class"
+                    class="icon"
+                  />
+                </a>
+                <a href="#!">
+                  <p class="item-title">Live Class</p>
+                </a>
+                <p class="item-desc">
+                  We are providing live classes with the best teacher for you
+                </p>
+              </div>
+
+              <!-- Item2 -->
+              <div class="item">
+                <a href="#!">
+                  <img
+                    src="./assets/icon/Icon2.svg"
+                    alt="Discuss"
+                    class="icon"
+                  />
+                </a>
+                <a href="#!">
+                  <p class="item-title">Discuss</p>
+                </a>
+                <p class="item-desc">
+                  Conversation with teachers or another students about task or
+                  any other thing
+                </p>
+              </div>
+
+              <!-- Item3 -->
+              <div class="item">
+                <a href="#!">
+                  <img src="./assets/icon/Icon3.svg" alt="Task" class="icon" />
+                </a>
+                <a href="#!">
+                  <p class="item-title">Task</p>
+                </a>
+                <p class="item-desc">
+                  We give every of our students task for gathering knowledge at
+                  home
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- ============ Course ============ -->
+      <div class="course">
+        <div class="main-content">
+          <div class="body">
+            <p class="top-title top-title-lv2">C O U R S E S</p>
+            <h2 class="heading-lv2">Popular Courses</h2>
+            <div class="row-top">
+              <p class="desc">
+                Check out our most poular courses that suit for you. Here you
+                can find your favourite one.
+              </p>
+              <a href="#!" class="all-course">View All Courses</a>
+            </div>
+            <div class="course-list">
+              <!-- Course-item1 -->
+              <div class="course-item">
+                <a href="#!"
+                  ><img
+                    src="./assets/img/s1.jpg"
+                    alt="Web Design"
+                    class="thumb"
+                /></a>
+                <div class="course-detail">
+                  <div class="wrap-item">
+                    <h3 class="heading-lv3">Web Design</h3>
+                    <p class="cost">Fee<span> $200</span></p>
+                    <p class="desc">Web design basic to higer level</p>
+                    <div class="static">
+                      <span>40 Classes</span>
+                      <span>3 Months</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Course-item2 -->
+              <div class="course-item">
+                <a href="#!"
+                  ><img
+                    src="./assets/img/s2.jpg"
+                    alt="Web Development"
+                    class="thumb"
+                /></a>
+                <div class="course-detail">
+                  <div class="wrap-item">
+                    <h3 class="heading-lv3">Web Development</h3>
+                    <p class="cost">Fee<span> $250</span></p>
+                    <p class="desc">Web development basic to higer level</p>
+                    <div class="static">
+                      <span>30 Classes</span>
+                      <span>3 Months</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Course-item3 -->
+              <div class="course-item">
+                <a href="#!"
+                  ><img
+                    src="./assets/img/s3.jpg"
+                    alt="UI/UX Design"
+                    class="thumb"
+                /></a>
+                <div class="course-detail">
+                  <div class="wrap-item">
+                    <h3 class="heading-lv3">UI/UX Design</h3>
+                    <p class="cost">Fee<span> $350</span></p>
+                    <p class="desc">UI/UX design basic to higer level</p>
+                    <div class="static">
+                      <span>50 Classes</span>
+                      <span>4 Months</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- =============== countdown ================= -->
+      <div class="countdown">
+        <div class="main-content">
+          <div class="body">
+            <div class="countdown-list">
+              <!-- item1  -->
+              <div class="countdown-item">
+                <p class="static"><strong>100+</strong></p>
+                <p class="desc">Popular Courses</p>
+              </div>
+
+              <!-- item2  -->
+              <div class="countdown-item">
+                <p class="static"><strong>500+</strong></p>
+                <p class="desc">Skilled Trainer</p>
+              </div>
+
+              <!-- item3  -->
+              <div class="countdown-item">
+                <p class="static"><strong>1M+</strong></p>
+                <p class="desc">Student Learning</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- ================ Feedback ================= -->
+      <div class="feedback">
+        <div class="main-content">
+          <div class="body">
+            <img
+              src="./assets/icon/feedback-icon.svg"
+              alt="Ben Foakes"
+              class="block-quote"
+            />
+            <blockquote class="comment">
+              “They are the best people. And this is the suitable platform to
+              learn from distance.”
+            </blockquote>
+            <p class="desc"><strong>Ben Foakes,</strong> student.</p>
+            <div class="feedback-cta">
+              <a href="#!" class="cta-btn"
+                ><div class="cta-btn-group">
+                  <img
+                    src="./assets/img/Vector left.svg"
+                    alt="previous"
+                    class="icon"
+                  /></div
+              ></a>
+              <a href="#!" class="cta-btn"
+                ><div class="cta-btn-group">
+                  <img
+                    src="./assets/img/Vector right.svg"
+                    alt="next"
+                    class="icon"
+                  /></div
+              ></a>
+            </div>
+            <!-- ava members -->
+            <img
+              src="./assets/img/afb1.jpg"
+              alt="member 1"
+              class="ava-fb ava-fb1"
+            />
+            <img
+              src="./assets/img/afb2.jpg"
+              alt="member 2"
+              class="ava-fb ava-fb2"
+            />
+            <img
+              src="./assets/img/afb3.jpg"
+              alt="member 3"
+              class="ava-fb ava-fb3"
+            />
+            <img
+              src="./assets/img/afb4.jpg"
+              alt="member 4"
+              class="ava-fb ava-fb4"
+            />
+            <img
+              src="./assets/img/afb5.jpg"
+              alt="member 5"
+              class="ava-fb ava-fb5"
+            />
+            <img
+              src="./assets/img/afb6.jpg"
+              alt="member 6"
+              class="ava-fb ava-fb6"
+            />
+          </div>
+        </div>
+      </div>
+      <!-- =============== Admit ====================== -->
+      <div class="admit">
+        <div class="main-content">
+          <div class="body">
+            <!-- admit left  -->
+            <div class="admit-left">
+              <div class="heading-lv2">Ready to Get Admit</div>
+              <div class="p desc">
+                Create your account and Boost your Career.
+              </div>
+            </div>
+            <!-- admit right  -->
+            <a href="#!" class="btn">Get Started</a>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!-- ================== Footer =================== -->
+    <footer class="footer">
+      <div class="main-content">
+        <div class="body">
+          <div class="row-top">
+            <!-- column 1 -->
+            <div class="column">
+              <a href="#!"
+                ><img src="./assets/img/lgft.svg" alt="Besnik." class="logo"
+              /></a>
+            </div>
+            <!-- column 2 -->
+            <div class="column">
+              <h3 class="title">Company</h3>
+              <ul class="list">
+                <li><a href="#!">About</a></li>
+                <li><a href="#!">Careers</a></li>
+                <li><a href="#!">Press</a></li>
+              </ul>
+            </div>
+            <!-- column 3 -->
+            <div class="column">
+              <h3 class="title">Community</h3>
+              <ul class="list">
+                <li><a href="#!">Team Plans</a></li>
+                <li><a href="#!">Blog</a></li>
+                <li><a href="#!">Students</a></li>
+                <li><a href="#!"></a>Schoolarships</li>
+              </ul>
+            </div>
+            <!-- column 4 -->
+            <div class="column">
+              <h3 class="title">Teaching</h3>
+              <ul class="list">
+                <li><a href="#!">Become a teacher</a></li>
+                <li><a href="#!">Teaching academy</a></li>
+              </ul>
+            </div>
+            <!-- column 5 -->
+            <div class="column">
+              <h3 class="title">Be social</h3>
+              <ul class="list list-column5">
+                <li>
+                  <a href="#!"
+                    ><img
+                      src="./assets/icon/x.svg"
+                      alt="twitter"
+                      class="social-icon"
+                    />Twitter</a
+                  >
+                </li>
+                <li>
+                  <a href="#!"
+                    ><img
+                      src="./assets/icon/fb.svg"
+                      alt="facebook"
+                      class="social-icon"
+                    />Facebook</a
+                  >
+                </li>
+                <li>
+                  <a href="#!"
+                    ><img
+                      src="./assets/icon/ins.svg"
+                      alt="instagram"
+                      class="social-icon"
+                    />Instagram</a
+                  >
+                </li>
+                <li>
+                  <a href="#!"
+                    ><img
+                      src="./assets/icon/ld.svg"
+                      alt="linkedin"
+                      class="social-icon"
+                    />Linkedin</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="cpr-block">
+            <p class="copyright">© Copyright 2020 by Mayad Ahmed. All right reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
